# ph0wnlabs

./: README.md  intro-lab01
lab-01/: 01-crackme-baby.md  02-crackme-baby.md  03-crackme-baby.md  README.md
lab-01/bins/: crackme-baby1  crackme-baby2  crackme-baby3  demo  meet-pico
lab-01/docker/: Dockerfile  docker-compose.yml
lab-01/slides/: lab01.tex
lab-01/spoiler-src/: Makefile  README.md  auto_crackme.sh  base64.c  base64.h  crackme.c  demo.c  level1.c  level1.cast  level2.c  level2.cast  level3.c  level3.cast  level4.c  level4.cast  level4_solve.py  levelN.sh  levels.h  qrcode-solution.txt
lab-02/: README.md  intro-lab02
lab-02/april-1/: CMakeLists.txt  fool.c
lab-02/firmware/: fool.uf2
lab-02/spoiler/: FLAG  fool.cast
lab-03/: README.md
lab-04/: Dockerfile  README.md  README.md~  dockcode  docker-compose.yml  intro-lab04
lab-04/slides/: Makefile  lab04.tex
lab-04/spoiler/: dockcode-main.rs  solution.md
